# python-repo-template

./: .bumpversion.cfg  .deepsource.toml  .dockerignore  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  ReleaseNotes.md  constraints.txt  pyproject.toml  requirements-build.txt  requirements-test.txt  setup.py  tox.ini
.cursor/rules/: makefile-python.mdc
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: branch-lint.yml  build-branch.yml  build-main.yml  ci-workflow.yaml  ci.yml  codeql-analysis.yml  dependabot-auto-merge.yml  python-ci.yml  snyk.yml
app/: main.py
module/: main.py
module/submodule/: __init__.py  main.py
module/submodule/tests/: test_example.py
module/tests/: test_example.py
tests/: test_example.py  test_main.py
