[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "app"
version = "1.0.0"
description = "Modern Python project template with Poetry, Makefile workflows, automated testing, linting, and GitHub Actions CI/CD."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "kyhau", email = "virtualda@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kyhau/python-repo-template"
Repository = "https://github.com/kyhau/python-repo-template"

[project.scripts]
app-cli = "app.main:main"

# Poetry-specific configuration
[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.test.dependencies]
pytest = "~8.4"
pytest-cov = "~7.0"

[tool.poetry.group.dev.dependencies]
black = "~25.9"
flake8 = "~7.3"
yamllint = "~1.35"
